Bug 1541278 - Markup View's background flash effect: use yellow from Box Model shift-hover highlight. r=mtigley
Differential Revision: https://phabricator.services.mozilla.com/D32864

UltraBlame original commit: 52bdbeb645862955799a12a575b3d763dc184711

--- a/devtools/client/themes/light-theme.css
+++ b/devtools/client/themes/light-theme.css
@@ -293,6 +293,29 @@ background
 .
 theme
 -
+bg
+-
+yellow
+-
+contrast
+{
+background
+:
+var
+(
+-
+-
+theme
+-
+bg
+-
+yellow
+)
+;
+}
+.
+theme
+-
 link
 .
 cm
