--- a/devtools/client/themes/markup.css
+++ b/devtools/client/themes/markup.css
@@ -175,6 +175,18 @@ splitter
 color
 )
 ;
+-
+-
+markup
+-
+text
+-
+color
+-
+contrast
+:
+black
+;
 }
 .
 theme
@@ -260,6 +272,27 @@ theme
 selection
 -
 background
+)
+;
+-
+-
+markup
+-
+text
+-
+color
+-
+contrast
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
 )
 ;
 }
@@ -1932,12 +1965,53 @@ flash
 -
 out
 {
-transition
+animation
 :
-background
-.
-5s
+flash
+-
+out
+1s
+ease
+-
+out
 ;
+}
+keyframes
+flash
+-
+out
+{
+from
+{
+background
+:
+var
+(
+-
+-
+theme
+-
+bg
+-
+yellow
+)
+;
+color
+:
+var
+(
+-
+-
+markup
+-
+text
+-
+color
+-
+contrast
+)
+;
+}
 }
 .
 editor
@@ -2624,6 +2698,106 @@ theme
 selection
 -
 color
+)
+;
+}
+/
+*
+Selected
+nodes
+being
+flashed
+in
+the
+tree
+should
+have
+dark
+selected
+text
+.
+Here
+we
+target
+nodes
+with
+theme
+-
+selected
+text
+colors
+and
+apply
+a
+dark
+accessible
+text
+color
+for
+when
+the
+yellow
+flashing
+background
+is
+applied
+.
+*
+/
+.
+theme
+-
+selected
+.
+theme
+-
+bg
+-
+yellow
+-
+contrast
+~
+.
+editor
+.
+theme
+-
+selected
+~
+.
+editor
+[
+class
+*
+=
+"
+theme
+-
+fg
+-
+color
+"
+]
+.
+theme
+-
+fg
+-
+contrast
+{
+color
+:
+var
+(
+-
+-
+markup
+-
+text
+-
+color
+-
+contrast
 )
 ;
 }
